# CppServer

./: CMakeLists.txt  ServerManager.cpp  ServerManager.hpp  main.cpp
Configurations/: ConfigurationLoader.cpp  ConfigurationLoader.hpp  ConfigurationUtils.hpp  IConfigurationLoader.hpp
Utils/: Connection.cpp  Connection.hpp  EpollManager.cpp  EpollManager.hpp  FDWrapper.cpp  FDWrapper.hpp  FileHandler.cpp  FileHandler.hpp  SocketWrapper.cpp  SocketWrapper.hpp  stringUtils.cpp  stringUtils.hpp
